fixed text alignment

--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ h2,
 h3 {
   font-family: 'Stone';
 }
+h3 {
+  text-align: center;
+}
 h4 {
   margin: 0;
 }
@@ -116,6 +119,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 3rem 0;
 }
 @media screen and (min-width: 700px) {
   footer {
